<resources>
    <!-- activity labels -->
    <string name="app_name">Serenity</string>
    <string name="label_activities_activity">Select Activity</string>
    <string name="title_activity_main">Serenity</string>
    <string name="label_goal">Goals</string>
    <string name="label_point">Points</string>
    <string name="label_question">Questions</string>
    <string name="action_about">About</string>
    <string name="activities_detail_label">Customize</string>

    <!-- Questions -->
    <string name="question_one">Did you reach your goal yet for this week?</string>
    <string name="question_two">How would you rate your overall mood today?</string>
    <string name="question_three">How would you characterize your feelings right now?</string>
    <string name="question_four">How well could you concentrate today?</string>
    <string name="question_five">How energetic do you feel today?</string>
    <string name="question_six">How interested were you in daily activities today?</string>
    <string name="question_seven">How did you feel while interacting with your colleagues?</string>

    <!-- Answers -->
    <!-- Yes and No -->
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <!-- Moods -->
    <string name="answer_energetic">Energetic</string>
    <string name="answer_happy">Happy</string>
    <string name="answer_angry">Angry</string>
    <string name="answer_apathetic">Apathetic</string>
    <string name="answer_sad">Sad</string>
    <string name="answer_content">Content</string>
    <string name="answer_tired">Tired</string>

    <!-- Food -->
    <string name="answer_inter_excited">Excited</string>
    <string name="answer_inter_happy">Happy</string>
    <string name="answer_inter_netural">Neutral</string>
    <string name="answer_inter_sad">Sad</string>
    <string name="answer_inter_frustrated">Frustrated</string>

    <!-- numbers -->
    <integer name="default_zero">0</integer>

    <!-- content provider -->
    <string name="content_authority" translatable="false">com.example.kelly.mmelk.app</string>

    <!-- error handling -->
    <string name="no_goals_available">No Goals yet! Tap on + to add a new goal!</string>
    <string name="no_activities_available">Seems like an error occurred! No activities to display!</string>
    <string name="spinner_not_selected_error">Answer cannot be "Select One". Please select an answer from the dropdown!</string>
    
    <!-- frequency -->
    <string name="spinner_hint">Select One</string>
    <string name="freq_name">Frequency</string>
    <string name="freq_daily">Daily</string>
    <string name="freq_weekly">Weekly</string>
    <string name="freq_two_days_weekly">2 Days a Week</string>
    <string name="freq_three_days_weekly">3 Days a Week</string>

    <!-- duration -->
    <string name="duration_name">Duration</string>
    <string name="duration_fifteen_min">15 Minutes</string>
    <string name="duration_thirty_min">30 Minutes</string>
    <string name="duration_one_hour">1 Hour</string>
    <string name="duration_two_hour">2 Hours</string>

    <!-- drawables -->
    <string name="res_canvas" translatable="false">canvas</string>
    <string name="res_dumbbell" translatable="false">dumbbell</string>
    <string name="res_football" translatable="false">football</string>
    <string name="res_lotus_position" translatable="false">lotus_position</string>
    <string name="res_meditation" translatable="false">meditation</string>
    <string name="res_newspaper" translatable="false">newspaper</string>
    <string name="res_phone_call" translatable="false">phone_call</string>
    <string name="res_running" translatable="false">running</string>
    <string name="res_swimming" translatable="false">swimming</string>
    <string name="res_team" translatable="false">team</string>


    <!-- buttons -->
    <string name="add_goal_btn">Add to Goals</string>
    <string name="add_mood_btn">Add your mood today!</string>
    <string name="action_save">Save</string>

    <string name="points">POINTS</string>

    <!-- menu actions -->
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_sign_out">Sign out</string>

    <string name="item_deleted">was removed!</string>

    <!-- for moods and chart -->
    <string name="line_description">Mood over Time</string>
    <string name="fifty_earned_points">You earned 50 points!</string>
    <string name="ten_earned_points">You earned 10 points!</string>
    <string name="weekly_mood">Weekly Mood</string>

    <!-- Authentication messages -->
    <string name="welcome_message">Welcome</string>
    <string name="goodbye_message">Goodbye!</string>

</resources>
