<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/activities_details_imageview"
            android:layout_gravity="center"
            android:layout_width="128dp"
            android:layout_height="128dp"
            tools:src="@drawable/canvas"/>
        <TextView
            android:id="@+id/activities_details_title_textview"
            android:textSize="32sp"
            android:padding="16dp"
            android:layout_gravity="center"
            tools:text="Running"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="@string/duration_name"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/activities_details_duration_spinner"
                android:layout_weight="2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="@string/freq_name"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/activities_details_freq_spinner"
                android:layout_weight="2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/activities_details_add_goal_button"
            android:text="@string/add_goal_btn"
            android:textColor="@android:color/white"
            android:background="@drawable/button_style"
            android:padding="@dimen/textview_padding"
            android:enabled="false"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>